# socket-programming

./: README.md
performance-testing-scripts/: send_msg.sh  testing.sh
socket-app/: README.md  client.sh  pom.xml  script.sh  send_msg.sh  server.sh
socket-app-python/: client.sh  run_test.sh  send_msg.sh  server.sh
socket-app-python/client/: basic_client.py
socket-app-python/handler/: client_handler.py
socket-app-python/server/: basic_server.py
socket-app-python/tests/client/: test_basic_client.py
socket-app-python/tests/handler/: test_client_handler.py
socket-app-python/tests/server/: test_basic_server.py
socket-app-python/tests/utils/: test_session_manager.py
socket-app-python/utils/: session_manager.py
socket-app/src/main/java/com/socket/app/: ClientApp.java  ServerApp.java
socket-app/src/main/java/com/socket/client/: BasicClient.java
socket-app/src/main/java/com/socket/handler/: ClientHandler.java
socket-app/src/main/java/com/socket/server/: BasicServer.java
socket-app/src/main/java/com/socket/utils/: SessionManager.java
socket-app/src/test/java/com/socket/client/: BasicClientTest.java
socket-app/src/test/java/com/socket/handler/: ClientHandlerTest.java
socket-app/src/test/java/com/socket/utils/: SessionManagerTest.java
socket-cpp/: .gitignore  CMakeLists.txt  client.sh  send_msg.sh  server.sh  testing.sh
socket-cpp/include/: BasicClient.hpp  BasicServer.hpp  ClientHandler.hpp  SessionManager.hpp
socket-cpp/include/client/: BasicClient.hpp
socket-cpp/include/handler/: ClientHandler.hpp
socket-cpp/include/server/: BasicServer.hpp
socket-cpp/include/utils/: SessionManager.hpp
socket-cpp/src/: BasicClient.cpp  BasicServer.cpp  ClientApp.cpp  ClientHandler.cpp  ServerApp.cpp  SessionManager.cpp
socket-cpp/src/apps/: ClientApp.cpp  ServerApp.cpp
socket-cpp/src/client/: BasicClient.cpp
socket-cpp/src/handler/: ClientHandler.cpp
socket-cpp/src/server/: BasicServer.cpp
socket-cpp/src/utils/: SessionManager.cpp
socket-cpp/test/: BasicClientTest.cpp  ClientAppTest.cpp  ServerAppTest.cpp
